--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-streamlit==1.23.0
-PyPDF2==3.0.1
-pdfplumber==0.8.1
-reportlab==4.0.4
+streamlit
+PyPDF2
+pdfplumber
+reportlab
+Pillow
+# For Streamlit Cloud, add these system dependencies via the "Manage App" settings
+zlib1g-dev
+libjpeg-dev
+libfreetype6-dev
